    @startuml

    entity artist {
    *artist_id : int
    --
    name : varchar
    country : varchar
    start_date : date
    description : text
    }

    entity album {
    *album_id : int
    --
    title : varchar
    release_date : date
    price : decimal
    stock : int
    format : varchar
    genre_id : int
    supplier_id : int
    }

    entity artist_album {
    *artist_id : int
    *album_id : int
    }

    entity genre {
    *genre_id : int
    --
    name : varchar
    description : text
    }

    entity customer {
    *customer_id : int
    --
    first_name : varchar
    last_name : varchar
    email : varchar
    phone : varchar
    address : varchar
    }

    entity employee {
    *employee_id : int
    --
    first_name : varchar
    last_name : varchar
    position : varchar
    salary : decimal
    phone : varchar
    email : varchar
    branch_id : int
    }

    entity branch {
    *branch_id : int
    --
    name : varchar
    address : varchar
    city : varchar
    phone : varchar
    }

    entity sale {
    *sale_id : int
    --
    sale_date : date
    total : decimal
    customer_id : int
    employee_id : int
    }

    entity sale_detail {
    *detail_id : int
    --
    quantity : int
    subtotal : decimal
    sale_id : int
    album_id : int
    }

    entity supplier {
    *supplier_id : int
    --
    company_name : varchar
    phone : varchar
    email : varchar
    address : varchar
    }

    ' Relationships

    artist ||--o{ artist_album
    album ||--o{ artist_album

    genre ||--o{ album
    supplier ||--o{ album

    branch ||--o{ employee

    customer ||--o{ sale
    employee ||--o{ sale

    sale ||--o{ sale_detail
    album ||--o{ sale_detail

    @enduml